# portaudio

./: Makefile.in  Makefile.win32  NOTES  TODO  bootstrap  config.mak  configure.in  makefile.win
docs/: index.html  pa_tut_asio.html  pa_tut_mac_osx.html
pa_asio/: pa_asio.cpp
pa_beos/: PlaybackNode.cc  PlaybackNode.h  pa_beos_mk.cc
pa_common/: pa_convert.c  pa_host.h  pa_lib.c  pa_trace.c  pa_trace.h  portaudio.h
pa_mac/: pa_mac.c
pa_mac_core/: pa_mac_core.c
pa_sgi/: Makefile  pa_sgi.c
pa_tests/: Makefile.in  config.mak  debug_convert.c  debug_dither_calc.c  debug_dual.c  debug_multi_in.c  debug_multi_out.c  debug_record.c  debug_record_reuse.c  debug_sine.c  debug_sine_amp.c  debug_sine_formats.c  debug_sine_getchar.c  debug_srate.c  debug_test1.c  pa_devs.c  pa_fuzz.c  pa_minlat.c  paqa_devs.c  paqa_errs.c  patest1.c  patest_buffer.c  patest_clip.c  patest_dither.c  patest_hang.c  patest_latency.c  patest_leftright.c  patest_longsine.c  patest_many.c  patest_maxsines.c  patest_mono.c  patest_multi_sine.c  patest_pink.c  patest_record.c  patest_ringmix.c  patest_saw.c  patest_sine.c  patest_sine8.c  patest_sine_formats.c  patest_sine_time.c  (+6 more)
pa_unix_oss/: Makefile  pa_unix_oss.c
pa_win_ds/: dsound_wrapper.c  dsound_wrapper.h  pa_dsound.c
pa_win_wmme/: pa_win_wmme.c
